--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Maston St</title>
-    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom">
 
@@ -84,7 +84,7 @@
                 <div class="row">
                     <div class="six-columns">
                         <div class="contenido-hero">
-                            <h2>Compra tu producto favorito</h2>
+                            <h2>Maston soporte & tecnologia</h2>
                             <pa>todos los mejores accesorios gamer</pa>
                             <form action="#" id="busqueda" method="post" class="formulario">
                                 <input class="u-full-width" type="text" placeholder="Que te gustaria comprar" id="buscador">
