--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row">
 
                 <div class="four columns">
-                    <img src="img/fondo 2.jpg" width="200" height="" alt="" id="logo">
+                    <img src="img/Maston PNG (1).png" width="200" height="" alt="" id="logo">
                 </div>
 
                 <div class="two columns u-pull-right">
